Improved interference behavior. Improved DTAGreedy algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_gensrv()
 
 #common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
+rosbuild_add_library(PatrolAgent src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp src/config.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
@@ -31,15 +31,24 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 ############ ALGORITMOS: ##############
 
-rosbuild_add_executable(Random src/Random_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp)
-rosbuild_add_executable(Conscientious_Reactive src/Conscientious_Reactive_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp)
-rosbuild_add_executable(Conscientious_Cognitive src/Conscientious_Cognitive_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp)
-rosbuild_add_executable(Heuristic_Conscientious_Reactive src/Heuristic_Conscientious_Reactive_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp)
-rosbuild_add_executable(Cyclic src/Cyclic_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp)
-rosbuild_add_executable(MSP src/MSP_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp)
-rosbuild_add_executable(GBS src/GBS_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp)
-rosbuild_add_executable(SEBS src/SEBS_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp)
-rosbuild_add_executable(DTAGreedy src/DTAGreedy_Agent.cpp src/PatrolAgent.cpp src/getgraph.cpp src/algorithms.cpp src/config.cpp)
+rosbuild_add_executable(Random src/Random_Agent.cpp)
+target_link_libraries(Random PatrolAgent)
+rosbuild_add_executable(Conscientious_Reactive src/Conscientious_Reactive_Agent.cpp)
+target_link_libraries(Conscientious_Reactive PatrolAgent)
+rosbuild_add_executable(Conscientious_Cognitive src/Conscientious_Cognitive_Agent.cpp)
+target_link_libraries(Conscientious_Cognitive PatrolAgent)
+rosbuild_add_executable(Heuristic_Conscientious_Reactive src/Heuristic_Conscientious_Reactive_Agent.cpp)
+target_link_libraries(Heuristic_Conscientious_Reactive PatrolAgent)
+rosbuild_add_executable(Cyclic src/Cyclic_Agent.cpp)
+target_link_libraries(Cyclic PatrolAgent)
+rosbuild_add_executable(MSP src/MSP_Agent.cpp)
+target_link_libraries(MSP PatrolAgent)
+rosbuild_add_executable(GBS src/GBS_Agent.cpp)
+target_link_libraries(GBS PatrolAgent)
+rosbuild_add_executable(SEBS src/SEBS_Agent.cpp)
+target_link_libraries(SEBS PatrolAgent)
+rosbuild_add_executable(DTAGreedy src/DTAGreedy_Agent.cpp)
+target_link_libraries(DTAGreedy PatrolAgent)
 
 ############ RESULTS & MONITOR NODE: ##############
 rosbuild_add_executable(monitor src/monitor.cpp src/getgraph.cpp)
