Added interferences in log file. Experiment stops if a robot does not work. Added program to generate hystograms of idleness values after an experiment (to be completed).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,3 +52,4 @@ target_link_libraries(DTAGreedy PatrolAgent)
 
 ############ RESULTS & MONITOR NODE: ##############
 rosbuild_add_executable(monitor src/monitor.cpp src/getgraph.cpp)
+rosbuild_add_executable(idlHystogram src/idlHystogram.cpp)
