--- a/params/move_base/costmap_common_params.yaml
+++ b/params/move_base/costmap_common_params.yaml
@@ -2,5 +2,8 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 robot_radius: 0.33
 inflation_radius: 0.33
+# cost_scaling_factor (double, default: 10.0)
+# A scaling factor to apply to cost values during inflation. The cost function is computed as follows for all cells in the costmap further than the inscribed radius distance and closer than the inflation radius distance away from an actual obstacle: exp(-1.0 * cost_scaling_factor * (distance_from_obstacle - inscribed_radius)) * (costmap_2d::INSCRIBED_INFLATED_OBSTACLE - 1), where costmap_2d::INSCRIBED_INFLATED_OBSTACLE is currently 254. NOTE: since the cost_scaling_factor is multiplied by a negative in the formula, increasing the factor will decrease the resulting cost values. 
+#cost_scaling_factor: 10.0
 observation_sources: laser_scan_sensor
 laser_scan_sensor: {sensor_frame: base_laser_link, data_type: LaserScan, topic: base_scan, marking: true, clearing: true}
