--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>patrolling_sim</name>
-  <version>2.0.0</version>
+  <version>2.2.2</version>
   <description>Multi-Robot Patrolling Stage/ROS Simulation Package.</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="davidbsp@citard-serv.com">David Portugal</maintainer>
+  <maintainer email="davidbsp@ingeniarius.pt">David Portugal</maintainer>
   <maintainer email="iocchi@dis.uniroma1.it">Luca Iocchi</maintainer>
 
 
@@ -47,12 +47,15 @@
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>stage_ros</build_depend>
+  <build_depend>roslib</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>move_base_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>stage_ros</run_depend>
+  <run_depend>roslib</run_depend>
+  
 
 
   <!-- The export tag contains other, unspecified, tags -->
